# CalculatorHaskell

./: Expr.hs  Haskell-Project2.cabal  Main.hs  Parsing.hs  README.md  REPL.hs  help.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Expr.hs  Main.hs  Parsing.hs  REPL.hs  TestFile_QuickCheck.hs  input.txt
testTXTFiles/: testAdvancedAllocation.txt  testBooleanComparisons.txt  testBooleanOperators.txt  testFunctions.txt  testIf.txt  testLooping.txt  testMathsFunctions.txt  testMiscFuncs.txt  testVariableAllocation.txt
